--- a/index.ipynb
+++ b/index.ipynb
@@ -2259,7 +2259,7 @@
    "outputs": [],
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
-    "    return list(map())"
+    "    return list(map(lambda x: (x_value - delta_x)))"
    ]
   },
   {
